--- a/resenas/angular.json
+++ b/resenas/angular.json
@@ -13,6 +13,8 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/resenas",
+
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
