--- a/resenas/package.json
+++ b/resenas/package.json
@@ -23,8 +23,6 @@
   "private": true,
   "dependencies": {
     "@angular/common": "^20.2.0",
-    "@angular/compiler": "^20.2.0",
-    "@angular/core": "^20.2.0",
     "@angular/forms": "^20.2.0",
     "@angular/platform-browser": "^20.2.0",
     "@angular/router": "^20.2.0",
@@ -33,9 +31,12 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.3.2",
     "@angular/build": "^20.2.1",
     "@angular/cli": "^20.2.1",
-    "@angular/compiler-cli": "^20.2.0",
+    "@angular/compiler": "^20.3.1",
+    "@angular/compiler-cli": "^20.3.1",
+    "@angular/core": "^20.3.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
